# checkbox-ua

./: .env.template  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
scripts/: run.sh
src/: config.py  database.py  dependencies.py  main.py  models.py  repository.py  unit_of_work.py
src/auth/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  services.py  utils.py
src/checks/: exceptions.py  models.py  repository.py  router.py  schemas.py  services.py
src/migrations/: env.py
src/migrations/versions/: 2025-04-29_40c005657356_add_models.py  2025-04-30_471c229b5743_update_field_size.py  2025-05-01_1aeff972668a_add_public_uuid_field.py
templates/: check.html
tests/: conftest.py
tests/e2e/: test_auth.py  test_checks.py
